Fixing font size for summary on mobile.

--- a/css/resume.scss
+++ b/css/resume.scss
@@ -13,12 +13,8 @@ $susy: (
 
 body {
   margin: 1em 1em 1em 1em;
-  font-family: Helvetica, Arial, sans-serif;;
+  font-family: Helvetica, Arial, sans-serif;
   color: #333;
-}
-
-div {
-  font-size: 1rem;
 }
 
 .site-header {
@@ -101,6 +97,7 @@ div {
 
 .summary {
   clear: both;
+  font-size: 1rem;
 }
 
 .workExperience, .portfolioSummary {
